@@ -1,5 +1,10 @@
 2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/hfsplus.c (grub_hfsplus_catfile): New field parentid.
+	(grub_hfsplus_iterate_dir): Add "." and "..".
+
+2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/cpio.c (canonicalize): Handle "..".
 	(grub_cpio_find_file) [MODE_USTAR]: Handle hardlinks.
 
